2010-08-21  Pawel Salek

	* configure.in, NEWS: release 2.4.8

2010-08-13  Pawel Salek

	* libbalsa/imap/imap-commands.c: check state after locking the handle.
	* libbalsa/imap/imap-handle.c: ditto.
	* libbalsa/imap/imap-handle.h: modify state checking macros accordingly.
	* libbalsa/imap/siobuf.c: set sio->ssl to null after SSL_free().

2010-08-13  Peter Bloomfield

	* src/mailbox-conf.c (create_local_mailbox_dialog): use window
	title to show mailbox type; fixes bgo #625695 (Jack Ostroff).

2010-08-12  Peter Bloomfield

	* src/balsa-message.c (balsa_message_set): do not crash when
	message == NULL.

2010-08-05  Peter Bloomfield

	* libbalsa/mailbox_imap.c
	(message_info_from_msgno): return NULL if msgno out of range;
	(imap_flags_cb), (imap_exists_idle), (imap_expunge_cb),
	(libbalsa_mailbox_imap_message_match),
	(libbalsa_mailbox_imap_get_message), (lbm_imap_change_user_flags),
	(libbalsa_mailbox_imap_msgno_has_flags): test for NULL return
	from message_info_from_msgno.

2010-07-28  Peter Bloomfield

	* libbalsa/identity.c (libbalsa_identity_init),
	(libbalsa_identity_finalize), (ident_dialog_update),
	(display_frame_update), (libbalsa_identity_new_config),
	(libbalsa_identity_save), (display_frame_set_gpg_mode),
	(ident_dialog_get_value): do not forget gpgme-related settings
	when running --without-gpgme.
	* libbalsa/identity.h: ditto.
	* libbalsa/rfc3156.h: ditto.

2010-07-28  Peter Bloomfield

	* src/mailbox-conf.c (balsa_server_conf_get_advanced_widget):
	disable SSL and TLS widgets when building --without-ssl.

2010-07-25  Pawel Salek

	* libbalsa/imap/imap-handle.c: work around buggy Gmail.
	* libbalsa/imap/imap-tls.c: change openssl api used for cert checks.
	* src/balsa-mime-widget-message.c: warn the user when no embedded
	message info available.

2010-07-14  Peter Bloomfield

	Install dialog to ask the user before selecting a different
	mailbox, and an option to not use it; fixes bug #620221
	(ghisha email it).
